--- a/app/views/checkout.scala.html
+++ b/app/views/checkout.scala.html
@@ -1,129 +1,5 @@
-<html>
-
-<head>
-    <title>Sourced Soles-The Latest In Sourced Footwear</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstra/p3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://cdn.phpoll.com/css/animate.css" rel="stylesheet">
-    <!--Animated css file-->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-</head>
-
-<body>
-    <nav class="navbar">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html" id="navbarlogo">Sourced Soles</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Search Store<span class="caret"></span></a>
-                        <ul class="dropdown-menu dropdown-lr animated flipInX dropdownflip">
-                            <li>
-                                <h4 class="text-center">Search <i class="fa fa-2x fa-fw fa-search text-inverse"></i></h4></li>
-                                <li>
-                                    <form action="#" method="POST" id=>
-                                        <input type="text" class="form-control" name="sneakername" placeholder="Sneaker Name">
-                                        <div class="form-actions">
-                                            <br>
-                                            <p class="text-center">
-                                                <button type="submit" class="btn btn-danger">Search</button>
-                                            </p>
-                                        </div>
-                                    </form>
-                                </li>
-                            </ul>
-                        </li>
-                        <!--end of search navlink-->
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span class="caret"></span></a>
-                            <ul class="dropdown-menu dropdown-lr animated flipInX dropdownflip">
-                                <li>
-                                    <h4 class="text-center">Login <i class="fa fa-2x fa-fw fa-lock text-inverse"></i></h4></li>
-                                    <li>
-                                        <form method="POST">
-                                            <input type="text" class="form-control" name="email" placeholder="example@example.com">
-                                            <br>
-                                            <input type="password" class="form-control" name="password" placeholder="Password">
-                                            <div class="form-actions">
-                                                <br>
-                                                <p class="text-center">
-                                                    <input type="submit" class="btn btn-danger" placeholder="Login">
-                                                </p>
-                                                <p class="text-center">Not a member? Click <a href="registerpage.html" style="color: #d9534f; text-decoration: none; !important">Here</a> to sign up!</p>
-                                            </div>
-                                        </form>
-                                    </li>
-                                </ul>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-2x fa-fw fa-shopping-cart text-inverse pull-right"></i></a>
-                                    <ul class="dropdown-menu dropdown-lr animated flipInX dropdownflip">
-                                        <li>
-                                            <h4 class="text-center redtext">Shopping Cart</h4>
-                                        </li>
-                                        <li>
-                                            <div class="panel panel-default">
-                                                <!-- Default panel contents -->
-                                                <div class="panel-heading">Items In Your Basket</div>
-                                                <!-- Table -->
-                                                <table class="table">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Item Name</th>
-                                                            <th>Price €</th>
-                                                            <th>Quantity</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <td>Example</td>
-                                                            <td>Example</td>
-                                                            <td>Example</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Example</td>
-                                                            <td>Example</td>
-                                                            <td>Example</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Example</td>
-                                                            <td>Example</td>
-                                                            <td>Example</td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </table>
-                                        </div>
-                                        <p class="pull-right">
-                                            <button type="button" class="btn btn-danger">Checkout</button>
-                                        </p>
-                                    </li>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.navbar-collapse -->
-                    </div>
-                    <!-- /.container-->
-                </nav>
+@import javax.swing.text.html.HTML
+@main("checkout"){
                 <div class="container">
                     <div class="row">
 
@@ -215,47 +91,9 @@
                                     </div>
                                 </div>
                             </div>
-
-
-
-
                         </div>
                     </div>
                     <!-- /.row-->
                 </div>
                 <!-- /.container-->
-                <footer id="footer">
-                    <div class="container">
-                        <div class="row footerinfo">
-                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                <h4 contenteditable="true">COPYRIGHT © 2016 SOURCED SOLES</h4>
-                                <p>Website Design &amp; Development CA2
-                                    <br>Ian Daly - X00132250
-                                    <br>Matthew Cleary - X00130277
-                                    <br>Shane Cotter - X00131736 </p>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse pull-right"></i></a>
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse pull-right"></i></a>
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse pull-right"></i></a>
-                                    <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse pull-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </footer>
-                </body>
-                <!--Javascript file to make footer always on bottom of page -->
-                <script>
-                    $(document).ready(function() {
-
-                        var docHeight = $(window).height();
-                        var footerHeight = $('#footer').height();
-                        var footerTop = $('#footer').position().top + footerHeight;
-
-                        if (footerTop < docHeight) {
-                            $('#footer').css('margin-top', 10 + (docHeight - footerTop) + 'px');
-                        }
-                    });
-                </script>
-
-                </html>
+    }
