--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="productbounds">
-                <a href="productspage.html">
+                <a href="@routes.HomeController.productsPage()">
                     <div class="col-sm-6 col-md-4 col-xs-6 col-lg-3">
                         <div class="thumbnail">
                             <img src="@routes.Assets.versioned("images/productplaceholder.svg")" alt="...">
