--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -36,31 +36,17 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="@routes.HomeController.index()">Home</a></li>
                         <li><a href="@routes.HomeController.products()">Products</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Search Store<span class="caret"></span></a>
-                            <ul class="dropdown-menu dropdown-lr animated flipInX dropdownflip">
-                                <li>
-                                    <h4 class="text-center">Search <i class="fa fa-2x fa-fw fa-search text-inverse"></i></h4></li>
-                                <li>
-                                    <form method="POST" id=>
-                                        <input type="text" class="form-control" name="sneakername" placeholder="Sneaker Name">
-                                        <div class="form-actions">
-                                            <br>
-                                            <p class="text-center">
-                                                <button type="submit" class="btn btn-danger">Search</button>
-                                            </p>
-                                        </div>
-                                    </form>
-                                </li>
-                            </ul>
-                        </li>
+
                             <!--end of search navlink-->
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Login<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-lr animated flipInX dropdownflip">
                                 <li>
-                                    <h4 class="text-center">Login <i class="fa fa-2x fa-fw fa-lock text-inverse"></i></h4></li>
+                                    <h4 class="text-center">
+                                        Login <i class="fa fa-2x fa-fw fa-lock text-inverse"></i></h4></li>
                                 <li>
+
                                     <form method="POST" id=>
                                         <input type="text" class="form-control" name="email" placeholder="Email Address">
                                         <br>
@@ -70,57 +56,12 @@
                                             <p class="text-center">
                                                 <input type="submit" class="btn btn-danger" placeholder="Login">
                                             </p>
-                                            <p class="text-center">Not a member? Click <a href="@routes.HomeController.registerPage()" style="color: #d9534f;
-                                                text-decoration: none;
-                                            !important">Here</a> to sign up!</p>
                                         </div>
                                     </form>
+
                                 </li>
                             </ul>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-2x fa-fw fa-shopping-cart text-inverse pull-right"></i></a>
-                        <ul class="dropdown-menu dropdown-lr animated flipInX dropdownflip">
-                            <li>
-                                <h4 class="text-center redtext">Shopping Cart</h4>
-                            </li>
-                            <li>
-                                <div class="panel panel-default">
-                                        <!-- Default panel contents -->
-                                    <div class="panel-heading">Items In Your Basket</div>
-                                        <!-- Table -->
-                                    <table class="table">
-                                        <thead>
-                                            <tr>
-                                                <th>Item Name</th>
-                                                <th>Price €</th>
-                                                <th>Quantity</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>Example</td>
-                                                <td>Example</td>
-                                                <td>Example</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Example</td>
-                                                <td>Example</td>
-                                                <td>Example</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Example</td>
-                                                <td>Example</td>
-                                                <td>Example</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <p class="pull-right">
-                                    <button type="button" class="btn btn-danger">Checkout</button>
-                                </p>
-                            </li>
-                            </ul>
-                        </ul>
+                    </ul>
                 </div>
                     <!-- /.navbar-collapse -->
             </div>
@@ -149,16 +90,16 @@
     </body>
         <!--Javascript file to make footer always on bottom of page -->
     <script>
-                    $(document).ready(function () {
+            $(document).ready(function () {
 
-                        var docHeight = $(window).height();
-                        var footerHeight = $('#footer').height();
-                        var footerTop = $('#footer').position().top + footerHeight;
+                var docHeight = $(window).height();
+                var footerHeight = $('#footer').height();
+                var footerTop = $('#footer').position().top + footerHeight;
 
-                        if (footerTop < docHeight) {
-                            $('#footer').css('margin-top', 10 + (docHeight - footerTop) + 'px');
-                        }
-                    });
+                if (footerTop < docHeight) {
+                    $('#footer').css('margin-top', 10 + (docHeight - footerTop) + 'px');
+                }
+            });
     </script>
 
 </html>
