--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -1,11 +1,16 @@
-@(products: List[models.Product])
-@main("products") {
+@(products: List[models.Product],user: models.User)
+@main("products",user) {
     <div class="container">
 
         <h2 class = "text-center">Our Products In Stock</h2>
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="productbounds">
+
+                @if(user == null) {
+                    <button>Delete This</button>
+                }
+
 
                 @for(p <- products) {
                     <div class="col-sm-6 col-md-4 col-xs-6 col-lg-4 products">
