--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -1,16 +1,18 @@
-@(products: List[models.Product],user: models.User)
-@main("products",user) {
+@(products: List[models.Product], user: models.User)
+@main("products", user) {
     <div class="container">
 
         <h2 class = "text-center">Our Products In Stock</h2>
 
+        @if(flash.containsKey("success")) {
+            <div class="alert alert-success">
+            @flash.get("success")
+            </div>
+
+        }
+
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="productbounds">
-
-                @if(user == null) {
-                    <button>Delete This</button>
-                }
-
 
                 @for(p <- products) {
                     <div class="col-sm-6 col-md-4 col-xs-6 col-lg-4 products">
@@ -18,10 +20,16 @@
                             <img src="@routes.Assets.versioned("images/productplaceholder.svg")" alt="...">
                             <div class="caption">
                                 <h3 class="text-center">@p.getName</h3>
-                                <h4 class="text-center"><span class = "redtext">&euro;</span>@("%.2f".format(p.getPrice))</h4>
+                                <h4 class="text-center"><span class = "redtext">&euro;</span> @("%.2f".format(p.getPrice))</h4>
                                 <p class="text-center">Size: @p.getSize</p>
                                 <p class="text-center">Stock: @p.getStock</p>
                                 <p class="text-center">Brand: @p.getBrand</p>
+
+                                <p class="text-center"><a href="@routes.HomeController.deleteProduct(p.getId)" class="btn-xs btn-default"
+                                onclick="return confirmDel();">
+                                    <span class="glyphicon glyphicon-trash"></span>
+                                </a>
+                                </p>
                             </div>
                         </div>
                     </div>
