--- a/app/views/addProduct.scala.html
+++ b/app/views/addProduct.scala.html
@@ -2,30 +2,38 @@
 @(addProductForm: Form[models.Product])(user: models.User)
 
 
-@main("AddProduct",user) {
+    @main("AddProduct", user) {
+
+        <div class="container">
+            <h2 class = "text-center text-muted">Add A Product To <span class = "logo">Sourced Soles</span></h2>
+
+            <div class="row">
+
+                <div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-centered">
 
 
-  <h4>Add a new Product</h4>
+                @form(action = routes.HomeController.addProductSubmit(), 'class -> "form-horizontal", 'role -> "form") {
 
-  @form(action = routes.HomeController.addProductSubmit(), 'class -> "form-horizontal", 'role->"form") {
+                    @inputText(addProductForm("id"), '_label -> "ID", 'class -> "form-control")
+                    @inputText(addProductForm("name"), '_label -> "Name", 'class -> "form-control")
+                    @inputText(addProductForm("brand"), '_label -> "Brand", 'class -> "form-control")
+                    @inputText(addProductForm("size"), '_label -> "Size", 'class -> "form-control")
+                    @inputText(addProductForm("stock"), '_label -> "Stock", 'class -> "form-control")
+                    @inputText(addProductForm("price"), '_label -> "Price", 'class -> "form-control")
 
-    @inputText(addProductForm("id"), '_label -> "ID", 'class -> "form-control")
-    @inputText(addProductForm("name"), '_label -> "Name", 'class -> "form-control")
-    @inputText(addProductForm("brand"), '_label -> "Brand", 'class -> "form-control")
-    @inputText(addProductForm("size"), '_label -> "Size", 'class -> "form-control")
-    @inputText(addProductForm("stock"), '_label -> "Stock", 'class -> "form-control")
-    @inputText(addProductForm("price"), '_label -> "Price", 'class -> "form-control")
-
-    <div class="actions">
-      <input type="submit" value="Add Product" class="btn btn-danger">
+                    <div class="actions">
+                        <input type="submit" value="Add Product" class="btn btn-danger">
 
 
-      @*<button type="cancel" onclick="javascript:window.location='http://stackoverflow.com';">Cancel</button>*@
-      <a href="@routes.HomeController.index()">
-        <button class="btn btn-warning">Cancel</button>
-      </a>
+                        @*<button type="cancel" onclick="javascript:window.location='http://stackoverflow.com';">Cancel</button>*@
+                        <a href="@routes.HomeController.index()">
+                            <button class="btn btn-warning">Cancel</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    </div>
-  }
+    }
 
-}
+    }
