--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -5,7 +5,7 @@
 
     <div class="container">
         <div class="row">
-            <div class = "col-lg-6 col-md-6 col-sm-8 col-xs-12 col-centered">
+            <div class = "col-lg-6 col-md-6 col-sm-8 col-xs-12 col-centered" id = "loginbounds">
                 <h2 class = "text-center text-muted">Login into <span class = "logo">Sourced Soles</span></h2>
 
                 @if(loginForm.hasGlobalErrors){
