--- a/app/views/addProduct.scala.html
+++ b/app/views/addProduct.scala.html
@@ -21,6 +21,13 @@
                     @inputText(addProductForm("stock"), '_label -> "Stock", 'class -> "form-control")
                     @inputText(addProductForm("price"), '_label -> "Price", 'class -> "form-control")
 
+                    @select(
+                        addProductForm("category.id"),
+                        options(Category.options),
+                        '_label -> "Category", '_default -> "-- Choose A Category--",
+                        '_showConstraints -> false, 'class -> "form-control"
+                    )
+
                     <div class="actions">
                         <input type="submit" value="Add Product" class="btn btn-danger">
 
